RESOLVED FIXED216833
[LFC] FormattingState should never be copied.
https://bugs.webkit.org/show_bug.cgi?id=216833
Summary [LFC] FormattingState should never be copied.
alan
Reported 2020-09-22 10:05:08 PDT
we should never need to copy a formatting state -and objects stored in the formatting states are not ready to be copied.
Attachments
Patch (3.15 KB, patch)
2020-09-22 10:08 PDT, alan
no flags
alan
Comment 1 2020-09-22 10:08:15 PDT
EWS
Comment 2 2020-09-22 10:33:26 PDT
Committed r267418: <https://trac.webkit.org/changeset/267418> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409374 [details].
Radar WebKit Bug Importer
Comment 3 2020-09-22 10:34:52 PDT
Note You need to log in before you can comment on or make changes to this bug.