[LFC] FormattingState should never be copied. https://bugs.webkit.org/show_bug.cgi?id=216833

Reviewed by Antti Koivisto.

Even when running a throw-away layout, we should not copy the state object but instead generate a new one for the subtree.
These objects should never be copied in general.

* layout/FormattingState.h:
* layout/LayoutState.h:
* layout/tableformatting/TableFormattingContextGeometry.cpp:
(WebCore::Layout::TableFormattingContext::Geometry::usedBaselineForCell):


Canonical link: https://commits.webkit.org/229625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267418 268f45cc-cd09-0410-ab3c-d52691b4dbfc